remove project spark-sql-perf checkout wrong version